diesel_compile_tests/tests/fail/expressions_can_only_be_compared_for_equality_to_expressions_of_same_type.stderr
error[E0277]: the trait bound `str: diesel::Expression` is not satisfied
  --> tests/fail/expressions_can_only_be_compared_for_equality_to_expressions_of_same_type.rs:15:19
   |
LL |     let pred = id.eq("string");
   |                   ^^ the trait `diesel::Expression` is not implemented for `str`
   |
   = help: the following other types implement trait `diesel::Expression`:
             &T
             AliasedField<S, C>
             Box<T>
             CaseWhen<CaseWhenConditionsIntermediateNode<W, T, Whens>, E>
             CaseWhen<CaseWhenConditionsLeaf<W, T>, ElseExpression<E>>
             CaseWhen<CaseWhenConditionsLeaf<W, T>, NoElseExpression>
             CountStar
             Exists<T>
           and N others
   = note: required for `&str` to implement `diesel::Expression`
   = note: required for `&str` to implement `AsExpression<diesel::sql_types::Integer>`

   
error[E0271]: type mismatch resolving `<name as Expression>::SqlType == Integer`
  --> tests/fail/expressions_can_only_be_compared_for_equality_to_expressions_of_same_type.rs:17:19
   |
LL |     let pred = id.eq(name);
   |                   ^^ type mismatch resolving `<name as Expression>::SqlType == Integer`
   |
note: expected this to be `diesel::sql_types::Integer`
  --> tests/fail/expressions_can_only_be_compared_for_equality_to_expressions_of_same_type.rs:8:17
   |
 LL |         name -> VarChar,
   |                 ^^^^^^^
   = note: required for `columns::name` to implement `AsExpression<diesel::sql_types::Integer>`
